static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&family=Roboto:wght@300;400&display=swap');

/*-------------------------------------------------------General*/
html {
    width: 100%;
    height: 100%;
}

body {
    background-color: #e0e0e0;
    font-family: "Roboto", sans-serif;
    display: flex;
    min-height: 100vh;
    flex-direction: column;    
    }

main {
   flex: 1 0 auto;
}

.text-shadow {
    text-shadow: 1px 1px 1px rgba(20, 20, 20, 0.5);
}

.btn:hover, .btn-small:hover, .btn:focus, .btn-small:focus {
    background-color: #e65100;
}

.btn, 
.btn-small,
.btn-large,
.ca-btn, 
.btn-flat,
.edit-btn {
    font-family: "Orbitron", sans-serif;
    font-weight: 400;    
}

/*-------------------------------------------------------Flashes*/
.row.flashes, .flashes h3 {
    margin: 0;
}

.flashes h3 {
    font-family: "Orbitron";
    font-weight: 500;
    font-size: calc(18px + (25 - 18) * ((100vw - 300px) / (1600 - 300)));
    color: #fafafa; 
    line-height: 3;
}

/*-------------------------------------------------------Navbar*/
.brand-logo {
    font-family: "Orbitron", sans-serif;
    font-weight: 500;
}
.nav-wrapper a span {
    color: #fb8c00;
}

.nav-extended.row {
    margin-bottom: 0;
}

.sidenav li>a:hover {
    background-color: #fb8c00;
}

#login-btn, #logout-btn {
   margin-top: 15px;
}

/*----------------------------------------------------Homepage*/

/*------------------------------Callout*/
.row.callout {
   position: relative;   
}

.img-wrapper {
    display: flex;
    flex-direction: column;
}

.hero-img {
    height: 450px;
    width: 99vw;
    align-self: center;
    object-fit: cover;
    z-index: -1;
}   

.row.overlay {
    margin: -35vh 0 18vh 0;
    position: absolute;    
}

.overlay-text h4 {
    font-family: "Orbitron", sans-serif;
    font-weight: 400; 
    color: #3d3b3b;
    font-size: calc(13px + (20 - 13) * ((100vw - 300px) / (1600 - 300)));
}

.overlay-btn {
    display: none;
}

.callout-btns {
    display: flex;
    justify-content: space-around;
    padding: 25px;
}
.btn-flat {
    font-weight: 400;
    color: #fafafa;
    border-radius: 5px;
}

.overlay-text {
   background-color: #fb8c00;
   border-radius: 6px;
   padding: 25px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   opacity: 98%;
   top: 35%;    
}

/*--------------------------About Card*/
.row .card-panel.about {
    height: auto;
}

.card-panel h4,
.carousel-outer.carousel-title {
    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
}

.about p {
    padding: 30px;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    color: #616161;
}

/*--------------------------Carousels*/
.carousel-wrapper {
   height: 35vh;
   width: 90%;
   margin: auto;
   margin-top: 10%;   
}

.carousel {
   height: 360px;
   top: -80px;
}

.carousel-title {
    font-family: "Orbitron", sans-serif;
    font-weight: 500;
    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
    margin-bottom: 35px;
}

.carousel-img {
   border-radius: 50%;
   opacity: 0.85;
}

.carousel .carousel-item>img {
   height: inherit;
   object-fit: contain;
}

.carousel-item p {
   color: #616161;
   font-family: 'Orbitron', sans-serif;
   font-weight: 500;
   font-size: calc(14px + (24 - 14) * ((100vw - 300px) / (1600 - 300)));
   font-weight: 500;
   background-color: transparent;
   padding: 5px 10px 50px 10px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
}

/*--------------------------------User Profile Page*/
.profile-btns {
    font-family: "Orbitron", sans-serif;
    display: flex;
    flex-direction: column;
    justify-items: center;    
}

.profile-btns a {
    margin: 15px 0;
}

/*--------------------------------Find Reviews Page*/
.card {
    background-color: #fb8c00;
}

.card-preview {
    display: grid;
    justify-content: center;
    grid-gap: .25em;
    grid-template-columns: repeat(auto-fit, minmax(8em, 1fr));
    grid-auto-flow: row;
}

.card-title.review-name {
    background-color: #fb8c00;
    padding: 15px;
    border-radius: 0 8px 0 0;
    font-family: "Orbitron", sans-serif;
    font-weight: 500;    
    font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300))); 
}

.card-image img {
    height: 270px;
    object-fit: cover;
}

.created-by {
    margin-left: 30px;
    font-size: calc(13px + (15 - 13) * ((100vw - 300px) / (1600 - 300)));
}

.game-data {
   background-color: #fb8c00;
   padding: 0 30px;
   color: #fafafa;
   font-weight: 400;
    
}

.card-content {
    background-color: #fafafa;
}

.card .card-action {
    background-color: #fafafa;
    height: 45px;
    padding: 7px;
}

.card .card-content p {
    font-family: "Roboto", sans-serif;
    font-weight: 400; 
    margin-top: 15px;
    margin-left: 30px;
    height: 90px;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-bottom: 10px;
}

.link {
    font-family: "Roboto", sans-serif;
    font-weight: 400; 
    padding: 5px;
    font-size: calc(10px + (14 - 10) * ((100vw - 300px) / (1600 - 300)));;
    
}

.btn {
   border-radius: 5px;
}

.btn-small, .edit-btn {
    background-color: #3d3b3b;
    border-radius: 5px;
    font-size: calc(10px + (11 - 10) * ((100vw - 300px) / (1600 - 300)));;
}
/*--------------------------------Read Review Page*/
.review-name {
    font-family: "Orbitron", sans-serif;
    font-weight: 500;
    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));;
    margin-left: 20px;
}

.review-data {
    font-weight: 500;
    font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300))); 
}

.row .card>img {
    object-fit: cover;
    width: 100%;
    height: auto;

}

 .card-action.review-btns a{
        margin-left: 2.5px;
}

.review-by {
    font-weight:400;
    font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300))); 
}

.review-data ul {
    margin-left: 20px;
}

.card .card-content p.full-review-text {
    font-family: "Roboto", sans-serif;
    font-weight: 400; 
    font-size: calc(13px + (15 - 13) * ((100vw - 300px) / (1600 - 300)));
    height: auto;
    margin-top: 15px;
    margin-left: 30px;
    padding-bottom: 10px;
    white-space: pre-wrap;
}


/*--------------------------------Add Review Page*/
.card-panel.review-card {
    height: auto;
}

/*--------------------------------Edit Review Page*/
.edit-btns {
    display: grid;
    padding: 12px;
    grid-row-gap: 14px;
}

.modal {
   top: 20% !important;
   border-radius: 6px;
   padding: 0 10px;
   max-width: 400px;
   text-transform: none;   
}
.edit-modal {
    height: 195px;
}

.modal .modal-content {
   padding: 24px 30px 0px 30px;
}

.modal-btns .btn.grey {
  margin-right: 13px;  
}

/*--------------------------------Log-in & Create Account Page*/

.card-panel:not(.search-card, .review-card) {
    height: 32em;
    margin-top: 30px;
}

.login-btn,
.ca-btn,
.link,
.card-panel h4 {
    font-family: "Orbitron", sans-serif;
    font-weight: 400;       
}

.login-btn, .ca-button {
    width: 250px;
    height: 55px;
}

/*--------------------------------Genres & Platforms Pages*/

.page-title {
    font-family: "Orbitron", sans-serif;
    font-weight: 500;    
    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));;   
}

.genre-container a,
.platform-container a {
    font-family: "Orbitron", sans-serif;
    font-weight: 500;    
    font-size: calc(12px + (17 - 12) * ((100vw - 300px) / (1600 - 300)));;   
}

.genre-container a,
.platform-container a {
    margin-top: 10px;
}

.platform-img img {
    object-fit: contain;
}

/*--------------------------------Page Footer*/
.page-footer .footer-copyright {
    margin: 0;
    background-color: transparent;    
}

.page-footer .footer-copyright span>a {
    color: #616161;
}

.page-footer .container .row {
    display: grid;
    place-items: center;
}

/*--------------------------------Media-Queries*/
@media only screen and (min-width:1024px) {
    .row.overlay {
        margin-top: -23vh;
    }
}
@media only screen and (min-width:1461px) {
    .callout {
        position: relative;
    }
    
    .overlay-text {
        position: absolute; 
    }

    nav {
        display: flex;
        flex-direction: column;
    }

    #menu {
        padding-right: 0;
        margin-right: 0;
    }

    .row.overlay {
        width: 550px;
        margin: -25vh 0 22vh 0;
    }

    .card-preview-container {
        display: flex;
        justify-content: center;
    }

    .card-action.review-btns a{
        margin-left: 20px;
    }

    .card-preview-container .col.l3 {
        margin: 0;
    }
    
    .carousel-item p {
        padding-bottom: 60.4px;
    }
    .card-title.review-name {
        font-size: 18px;
    }

    #login_mob, #logout_mob {
        display: none;
    }

    .row.edit-btns {
        display: block;
        
    }

    .modal-btns .btn.grey {
        margin-right: 42px;  
    }
}

